// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comprueba que Link cambie cuando se pasae el ratonpor encima 1`] = `
<a
  className="normal"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;

exports[`Comprueba que Link cambie cuando se pasae el ratonpor encima 2`] = `
<a
  className="hovered"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;

exports[`Comprueba que Link cambie cuando se pasae el ratonpor encima 3`] = `
<a
  className="normal"
  href="http://www.facebook.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Facebook
</a>
`;
